kuber-homeworks/2.3/task-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      nodePort: 30001
